# industrial_iot_dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main_data_generator.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: conveyor_belt_config.yml
data_generators/ball_mill/grinding_jar/: retsch_grindcontrol.py  s20_pressure.py  tr10b_temperature.py
data_generators/ball_mill/mill_shell/: mill_shell_acoustic.py  mill_shell_vibration.py
data_generators/ball_mill/motor/: motor_accelerometer.py  motor_temperature.py
data_generators/conveyor_belt/: heat_sensor.py  inductive_sensor.py  touchswitch_conveyor.py  ultrasonic_sensor.py
data_generators/conveyor_belt/idler_roller/: smart_idler_sensor.py
data_generators/conveyor_belt/impact_bed/: impact_bed_accelerometer.py  impact_bed_load_cell.py
data_generators/conveyor_belt/pulley/: incremental_encoder.py  touchswitch_pulley.py
models/: anomaly_model.pkl  anomaly_scaler.pkl
streamlit_app/: app.py
streamlit_app/assets/: styles.css
streamlit_app/data_output/ball_mill/: mill_shell_acoustic_data.csv  mill_shell_vibration_data.csv  motor_accelerometer_data.csv  motor_temperature_data.csv  retsch_grindcontrol_data.csv
streamlit_app/data_output/conveyor_belt/: heat_PATOL5450-CB1-HOTSPOT_data.csv  impact_bed_load_cell.csv  smart_idler_data.csv  touchswitch_conveyor.csv  (+1 more)
streamlit_app/pages/: 01_Conveyor_Belts.py  02_Conveyor_Belts.py  03_Ball_Mill.py
streamlit_app/utils/: data_loader.py  hf_loader.py  plotting_utils.py
(+5 files in other folders)
